--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -10,11 +10,11 @@
           <li><span class="fa-li"><i class="fas fa-check"></i></span>{{storage}}</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>{{limit}}</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>{{access}}</li>
-          <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>{{private}}</li>
-          <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>{{support}}</li>
-          <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>{{subdomain}}
+          <li class={{privateList}}><span class=" fa-li"><i class={{privateIcon}}></i></span>{{private}}</li>
+          <li class={{supportList}}><span class="fa-li"><i class={{supportIcon}} ></i></span>{{support}}</li>
+          <li class={{subdomainList}}><span class=" fa-li"><i class={{supportIcon}} ></i></span>{{subdomain}}
           </li>
-          <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>{{reports}}</li>
+          <li class={{reportsList}}><span class="fa-li"><i class={{reportsIcon}}></i></span>{{reports}}</li>
         </ul>
         <div class="d-grid">
           <a href="#" class="btn btn-primary text-uppercase">Button</a>
